mysterious whitespace fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,13 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    position:relative;
+    overflow-x: hidden;
+}
+
 .app {
     background-color: #E6DBC5;
     scroll-behavior: smooth;
